      connect time, external ip (has not to be the public ip!), route and dns servers.
      Also the state of IPv6, voip and tr069.
    * remove jffs2.ko: remove JFFS2 kernel module, saving 144-192 kB of
      uncompressed firmware space
    * disable multid services: dns, dhcp and llmnr could be remapped with libmultid

- New packages, libs, modules:
    * avahi 0.6.30
    * dbus 1.5.6
    * libmultid 0.5
    * protobuf-c 0.15
    * smusbutil 1.1

- Updated tools and hooks:
    * get_ip:
     + default method can be set via web interface
     + added new methods stun-ip (default) and route
     + removed obsolete methods ostat and extquery

- Updated patches:
    * Update freetzmount patch (by hermann, updated by cuma)

- Updated packages and libs:
    * apr-util 1.4.1
    * bind 9.8.0-P4
    * callmonitor 1.19.3
    * curl 7.24.0
    * cyassl 2.0.6
    * dnsmasq 2.59
    * dosfstools 3.0.12
    * dropbear 2011.54
    * ffmpeg 0.10
    * gdb 7.3.1
    * git 1.7.9
    * httpry: 0.1.6 and webinterface added
    * iptables 1.4.11.1
    * libevent 2.0.16
    * libctlmgr 0.5 (previously libfreetz)
    * libftdi 0.19
    * libosip2 3.5.0
    * libpng 1.2.46
    * lighttpd 1.4.30
    * minidlna 1.0.23
    * ncurses 5.9
    * netatalk 2.2.2
    * netpbm 10.35.82
    * ngircd 18
    * ntfs-3g 2012.1.15
    * openssh 5.9p1
    * openssl 0.9.8s
    * openvpn 2.2.2
    * pcre 8.21
    * php 5.3.10
    * Pingtunnel 0.72
    * privoxy 3.0.19
    * radvd 1.8.3
    * readline 6.2
    * RRDstats: Cisco EPC support
    * rsync 3.0.9
    * ser2net 2.7
    * siproxd 0.8.1
    * sispmctl 3.1
    * slang 2.2.4
    * squid 3.0.STABLE26
    * sqlite 3.7.10
    * sshfs-fuse 2.3
    * stunnel 4.52
    * subversion 1.7.2
    * tinc 1.0.15
    * tmux 1.5
    * tor 0.2.2.35
    * transmission 2.33
    * tree 1.6.0
    * truecrypt 7.1
    * umurmur 0.2.8
    * unrar 4.1.4 (=rar 4.10)
    * vsftpd-2.3.5
    * wget 1.13.4
    * zlib 1.2.6

- Remove packages, libs, modules, tools: