@@ -451,3 +451,16 @@ config FREETZ_HAS_AVM_JUNK_BYTES
 	help
 		Select this if you have a firmware with junk bytes in SquashFS, as
 		described in http://freetz.org/ticket/1614#comment:70
+
+config FREETZ_HAS_AVM_MULTI_ANNEX
+	bool "Has AVM Multi-Annex"		if FREETZ_TYPE_CUSTOM
+	default y		if FREETZ_TYPE_LABOR_PREVIEW && \
+		( \
+			FREETZ_TYPE_FON_WLAN_7270_V2 || \
+			FREETZ_TYPE_FON_WLAN_7270_V3 ||\
+			FREETZ_TYPE_FON_WLAN_7390 \
+		)
+	default n
+	help
+		Select this if you have a firmware with Multi-Annex.
+
