@@ -14,3 +14,7 @@ if [ "$FREETZ_REMOVE_ANNEX_B_FIRMWARE" == "y" ]; then
 	rm_files "${FILESYSTEM_MOD_DIR}/lib/modules/dsp_*/*-B-dsl.bin"
 fi
 
+if [ "$FREETZ_REMOVE_MULTI_ANNEX_FIRMWARE" == "y" ]; then
+	echo1 "removing Multi-Annex firmware files"
+	rm_files "${FILESYSTEM_MOD_DIR}/lib/modules/dsp_*/*-?-dsl.bin*"
+fi
