@@ -55,6 +55,7 @@ Latest changes:
     * remove jffs2.ko: remove JFFS2 kernel module, saving 144-192 kB of
       uncompressed firmware space
     * disable multid services: dns, dhcp and llmnr could be remapped with libmultid
+    * remove Multi-Annex firmware files: Newest images has 1 full Annex + some bsdiff
 
 - New packages, libs, modules:
     * avahi 0.6.30
